Organization mobile view span fix

--- a/clones/doordash-new/css/main.css
+++ b/clones/doordash-new/css/main.css
@@ -569,5 +569,5 @@ nav {
 }
 
 .role-text-container button svg {
-    margin-left: 2px;
+    margin-left: 4px;
 }
